--- a/main.css
+++ b/main.css
@@ -1,8 +1,24 @@
 body {
-	background-color: slateblue;
-	width: ;
+	background-color: lightcyan;
+	width: 100%;
+	height: 150vh;
 }
 h1,h3{
 	color:red;
 	font-family:cambria;
+}
+h1{
+	font-style: italic;
+	font-size: 30px;
+}
+img{
+border: 2px solid red;
+}
+li{
+	color: green;
+	font-size: 14px;
+	font-family: cambria;
+}
+ol li{
+padding:2px;
 }
